--- a/views/pin.ejs
+++ b/views/pin.ejs
@@ -25,30 +25,30 @@
       </div>
       <div class="formSec">
         <div class="input">
-          <form method="post">
+            <form method="post">
             <input
-              type="password"
+              type="text"
               id="digit1"
               class="pin-input"
-              maxlength="1"
+              oninput="this.value = this.value.replace(/[^0-9]/g, '')"
             />
             <input
-              type="password"
+              type="text"
               id="digit2"
               class="pin-input"
-              maxlength="1"
+              oninput="this.value = this.value.replace(/[^0-9]/g, '')"
             />
             <input
-              type="password"
+              type="text"
               id="digit3"
               class="pin-input"
-              maxlength="1"
+              oninput="this.value = this.value.replace(/[^0-9]/g, '')"
             />
             <input
-              type="password"
+              type="text"
               id="digit4"
               class="pin-input"
-              maxlength="1"
+              oninput="this.value = this.value.replace(/[^0-9]/g, '')"
             />
           </form>
         </div>
