--- a/views/pin.ejs
+++ b/views/pin.ejs
@@ -27,25 +27,25 @@
         <div class="input">
             <form method="post">
             <input
-              type="text"
+              type="number"
               id="digit1"
               class="pin-input"
               oninput="this.value = this.value.replace(/[^0-9]/g, '')"
             />
             <input
-              type="text"
+              type="number"
               id="digit2"
               class="pin-input"
               oninput="this.value = this.value.replace(/[^0-9]/g, '')"
             />
             <input
-              type="text"
+              type="number"
               id="digit3"
               class="pin-input"
               oninput="this.value = this.value.replace(/[^0-9]/g, '')"
             />
             <input
-              type="text"
+              type="number"
               id="digit4"
               class="pin-input"
               oninput="this.value = this.value.replace(/[^0-9]/g, '')"
