--- a/views/pin.ejs
+++ b/views/pin.ejs
@@ -60,6 +60,7 @@
               oninput="this.value = this.value.replace(/[^0-9]/g, '')"
               inputmode="numeric"
               pattern="[0-9]*"
+              maxlength="1"
             />
           </form>
         </div>
